[tool.poetry]
name = "post-roulette"
version = "0.1.0"
description = ""
authors = ["Arjun Ray <aray@mainstay.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tinydb = "^4.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.11.4"
black = "^22.12.0"
pyproject-flake8 = "5.0.4"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
roulette = "post_roulette:main"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
)/
'''

[tool.flake8]
max-line-length = 88